--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="{{v webapp:rootUrl/}}css/style.css?{{v context:paramRandom/}}">
 </head>
 <body>
-<p>Hello World Myapp</p>
+<p>Hello World Myapp with an update</p>
 </body>
 </html>
